--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -9,13 +9,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "concurrently": "^4.1.2",
     "cross-env": "^6.0.0",
     "electron": "^6.0.10",
     "electron-is-dev": "^1.1.0",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
+    "react-simplemde-editor": "^4.1.0",
     "wait-on": "^3.3.0"
   },
   "scripts": {
