--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
     "react-simplemde-editor": "^4.1.0",
+    "uuid": "^3.3.3",
     "wait-on": "^3.3.0"
   },
   "scripts": {
@@ -30,7 +31,10 @@
     "dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && npm run ele\""
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "jsx-a11y/anchor-is-valid": "off"
+    }
   },
   "browserslist": {
     "production": [
