--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^6.0.0",
     "electron": "^6.0.10",
     "electron-is-dev": "^1.1.0",
+    "electron-store": "^5.0.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
