--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -16,6 +16,7 @@
     "electron-is-dev": "^1.1.0",
     "electron-store": "^5.0.0",
     "node-sass": "^4.12.0",
+    "qiniu": "^7.2.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
