--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -30,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "ele": "nodemon --watch main.js --exec \"electron .\"",
+    "ele": "nodemon --watch main.js --watch src/menuTemplate.js --exec \"electron .\"",
     "dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && npm run ele\""
   },
   "eslintConfig": {
